# QuiCh

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  fly.yml  linter.yml
app/: README  alembic.ini  config.py  database.py  franken.db  jinja_setup.py  main.py
app/alembic/: env.py
app/alembic/versions/: 3dac15e3766c_create_users_table.py  4e5a572f649c_add_ideas.py  521c26172c55_add_search.py  5844d490e443_add_status_and_error_to_transcriptions.py  691908104508_create_transcriptions_docs_and_chunks_.py  91375a444acd_add_youtube_table.py  92323df3558f_add_youtube_and_idea_table.py  96c5be368359_initial_migration.py  b9a5b95c8e7a_update_transcription_and_docs_tables.py  ee9bc13f3a5c_initial_migration.py
app/api/: deps.py  exceptions.py  login.py  routers.py  sorting.py  transcript.py  v1.py  youtube.py
app/auth/: authorization.py  exceptions.py  locations.py  rate_limit.py  routers.py  service.py  tokens.py
app/middleware/: request_logger.py
app/models/: base.py  base_class.py  custom_types.py  search.py  texts.py  user.py  youtube.py
app/schemas/: search.py  token.py  transcript.py  user.py
app/scripts/: check_db.py  extract_all_ideas.py  init_db.py  load_transcript.py  load_youtube_channel.py  main_2.py  main_full.py  process_all_transcripts.py  process_transcripts.py  script.py
app/services/: answer.py  chunker.py  document_schema.py  embeddings.py  ideas_extractor.py  json_utils.py  llm_chunks.py  security.py  transcript.py  transcript_data.py
app/static/: site.webmanifest
app/static/styles/: cursor.css
app/templates/: 404.jinja2  LICENSE.jinja2  TOS.jinja2  base.jinja2  blog.jinja2  footer.jinja2  index.jinja2  login.jinja2  navbar.jinja2  privacy.jinja2  rate_limit_exceeded.jinja2  search.jinja2  search_items.jinja2  signin.jinja2  signup.jinja2
