[tool.poetry]
name = "quich"
version = "0.1.0"
description = ""
authors = ["falcolnic <mykh.yano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
sqlalchemy = "2.0.35"
voyageai = "0.2.3"
anthropic = "0.36.0"
instructor = "1.6.1"
pydantic = "2.9.2"
fastapi = "0.115.2"
fasthx = "2.0.1"

[tool.poetry.dev-dependencies]
black = "24.4.2"
pre-commit = "3.8.0"
isort = "5.13.2"
ruff = "0.5.5"
psycopg2-binary = "2.9.9"
pytest = "8.3.3"
alembic = "1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
